<resources>
    <string name="app_name">EziBy</string>
    <string name="my_api_key">AIzaSyB_GHe90zmgCOst2JoDq_MZNzAPaREBLUE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">Welcome to EziBy</string>
    <string name="location_message">Please allow location services to automatically update your location information. We do not utilize provided information in any way.</string>
    <string name="sign_in">Sign in</string>
    <string name="GoogleClientID">282193155104-1ft5voamq83uilbqu7epehf6ltrg8sd5.apps.googleusercontent.com</string>
    <string name="loginText">Login</string>
    <string name="sample_details">A series of fortifications made of stone, brick, tamped earth.</string>
    <string name="scroll_view_of_all_available_places">Scroll view of all available places</string>
    <string name="for_your_daily_shopping">For your daily shopping.</string>
    <string name="welcome">Welcome</string>
    <string name="to">To</string>
    <string name="next">Next</string>
    <string name="image_of_location">Image of Location</string>
    <string name="i_agree_to_share_my_location">I Agree to Share My Location</string>
    <string name="header_text">Nuwera Eliya</string>
    <string name="add_place">Add Place</string>
    <string name="details">Details</string>
    <string name="edit">Edit</string>
    <string name="created_on">Created On:</string>
    <string name="created_by">Created By:</string>
    <string name="delete">Delete</string>
    <string name="comments">Comments</string>
    <string name="add_comment">Add Comment</string>
    <string name="your_comments">Your comments</string>
    <string name="google_map">Google Map</string>
    <string name="navigate">Navigate</string>
    <string name="about_wanderlust">About WanderLust</string>
    <string name="wanderLustEmail">www.wanderlust.lk</string>
    <string name="website">Website</string>
    <string name="place_header">Nuwera Eliya</string>
    <string name="save_place">Save Place</string>
    <string name="place_name">Place Name</string>
    <string name="google_location">Google Location</string>
    <string name="set_google_location">Set Google Location</string>
    <string name="country">Country</string>
    <string name="publicly_available">Publicly Available</string>
    <string name="please_add_places">Please add places</string>
    <string name="no_places">No Places!</string>
    <string name="no_shared_places">No Shared Places!</string>
    <string name="please_share_places">Please share places</string>
    <string name="sign_out">Sign Out</string>
    <string name="bottom_navigation_icon_home">Home</string>
    <string name="bottom_navigation_icon_search">Search</string>
    <string name="bottom_navigation_icon_profile">Profile</string>
    <string name="bottom_navigation_icon_wish_list">Wish List</string>
    <string name="bottom_navigation_icon_cart">Cart</string>
    <string name="carousel_image_description">Carousel Image</string>
    <string name="header_image_description">Header Image</string>
    <string name="category_text">Category</string>
    <string name="label_add_to_cart">ADD TO CART</string>
    <string name="label_out_of_stock">OUT OF STOCK</string>
    <string name="description_image_of_an_item">Image of an item</string>
    <string name="icon_favorite">Favorite Icon</string>
    <string name="text_grains">Grains</string>
    <string name="description_clap_image">Clap Image</string>
    <string name="text_thank_you_for_shopping_with_us">THANK YOU FOR SHOPPING WITH US</string>
    <string name="text_a_copy_of_receipt_has_been_sent_to_your_email">A copy of receipt has been sent to your email</string>
    <string name="text_email">hamzaanushath@gmail.com</string>
    <string name="text_continue_shopping">CONTINUE SHOPPING</string>
    <string name="text_45_seconds">45 Seconds</string>
    <string name="text_place_order">PLACE ORDER</string>
    <string name="text_choose_available_payment_method">CHOOSE AVAILABLE PAYMENT METHOD</string>
    <string name="text_grand_total">Grand Total</string>
    <string name="text_delivery_charges">Delivery charges (Akkaraipattu)</string>
    <string name="text_subtotal">Subtotal</string>
    <string name="text_tick_image">Tick Image</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_review">Review</string>
    <string name="text_payment">Payment</string>
    <string name="text_cash_on_delivery">Cash On Delivery</string>
    <string name="description_image_of_cash_on_delivery">Image of cash on delivery</string>
    <string name="text_order_includes">Order Includes</string>
    <string name="text_estimated_delivery_date">Estimated Delivery Date</string>
    <string name="text_delivery_details">Delivery Details</string>
    <string name="text_proceed_to_payment">PROCEED TO PAYMENT</string>
    <string name="text_review_details">REVIEW DETAILS</string>
    <string name="text_please_call_me_prior_to_delivery">Please call me prior to delivery</string>
    <string name="text_delivery_note">Delivery Note</string>
    <string name="text_select_delivery_city">Select Delivery City</string>
    <string name="text_address">Address</string>
    <string name="label_email">email</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_name">Name</string>
    <string name="text_choose_delivery_location_on_map">Choose Delivery location on map</string>
    <string name="description_image_of_location">Image of location</string>
    <string name="text_brands">Brands</string>
    <string name="text_new_arrivals">New Arrivals</string>
    <string name="text_trending">Trending</string>
    <string name="text_recently_viewed">Recently Viewed</string>
    <string name="description_image_of_a_category">Image of a Category</string>
    <string name="text_category">Category</string>
    <string name="description_image_of_category">Image of Category</string>
    <string name="description_image_of_a_brand">Image of a Brand</string>
    <string name="text_most_viewed">Most Viewed</string>
    <string name="text_no_items_found">No Items found</string>
    <string name="text_product_name">Product Name</string>
    <string name="text_product_price">Rs. 100.00</string>
    <string name="text_minus_mark">-</string>
    <string name="text_plus_mark">+</string>
    <string name="text_quantity">99</string>
    <string name="text_oops_empty_cart">Oops! Empty cart</string>
    <string name="text_proceed_to_checkout">PROCEED TO CHECKOUT</string>
    <string name="value_name">Mohamed Anushath</string>
    <string name="value_delivery_city">Nawala</string>
    <string name="value_pickup_method">Pick up method</string>
    <string name="value_phone_number">0777701979</string>
    <string name="value_email">hamzaanushath@gmail.com</string>
    <string name="value_delivery_date_and_time">(On or before) 17-Dec-2024 19:24:22 PM</string>
</resources>