<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="4dp"
    tools:context=".screens.Order_2_Review">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="4dp">

        <!-- Progress Bar Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/text_tick_image"
                android:src="@drawable/icons8_tick_100" />

            <View
                android:layout_width="80dp"
                android:layout_height="2dp"
                android:background="@color/black" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/text_tick_image"
                android:src="@drawable/icons8_tick_filled_100"
                app:tint="@color/green" />

            <View
                android:layout_width="80dp"
                android:layout_height="2dp"
                android:background="@color/black" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/text_tick_image"
                android:src="@drawable/icons8_tick_100" />
        </LinearLayout>

        <!-- Steps Titles -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/text_delivery"
                android:textAlignment="textStart"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/text_review"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/text_payment"
                android:textAlignment="textEnd"
                android:textSize="14sp"

                android:textStyle="bold" />

        </LinearLayout>

        <!-- Delivery Details Section -->
        <TextView
            android:id="@+id/tvDeliveryDetailsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/text_delivery_details"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_delivery_city"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvPickupType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_pickup_method"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_phone_number"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_email"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="@color/line_color" />
        <!-- Spacer -->
        <View
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <!-- Estimated Delivery Date Section -->
        <TextView
            android:id="@+id/tvEstimatedDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/text_estimated_delivery_date"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEstimatedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_delivery_date_and_time"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="@color/line_color" />

        <!-- Spacer -->
        <View
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <!-- Order Includes Section -->
        <TextView
            android:id="@+id/tvOrderIncludesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/text_order_includes"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_review_item"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintBottom_toTopOf="@+id/btn_proceed_to_payment"
        tools:layout_editor_absoluteX="4dp" />

    <!-- Place Order Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_proceed_to_payment"
        style="@style/add_to_cart_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_proceed_to_payment"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="4dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

