<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.Order_1_DeliveryAddress">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <!-- Progress Bar Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/text_tick_image"
                android:src="@drawable/icons8_tick_filled_100"
                app:tint="@color/green" />

            <View
                android:layout_width="80dp"
                android:layout_height="2dp"
                android:background="@color/black" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/text_tick_image"
                android:src="@drawable/icons8_tick_100" />

            <View
                android:layout_width="80dp"
                android:layout_height="2dp"
                android:background="@color/black" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/text_tick_image"
                android:src="@drawable/icons8_tick_100" />
        </LinearLayout>

        <!-- Steps Titles -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/text_delivery"
                android:textAlignment="textStart"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/text_review"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/text_payment"
                android:textAlignment="textEnd"
                android:textSize="14sp"

                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Location Selection Button -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/description_image_of_location"
                    android:src="@drawable/icons8_location_50" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/text_choose_delivery_location_on_map"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- Name Field -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/text_name"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@android:drawable/edit_text"
                android:hint="@string/text_name"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <!-- Phone Number Field -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/text_phone_number"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@android:drawable/edit_text"
                android:hint="@string/text_phone_number"
                android:inputType="phone"
                android:padding="10dp" />

            <!-- Email Field -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/label_email"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@android:drawable/edit_text"
                android:hint="@string/label_email"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <!-- Address Field -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/text_address"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@android:drawable/edit_text"
                android:hint="@string/text_address"
                android:inputType="textPostalAddress"
                android:padding="10dp" />

            <!-- City Selection Dropdown -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/text_select_delivery_city"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/edit_text"
                android:padding="10dp" />

            <!-- Delivery Note Field -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/text_delivery_note"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@android:drawable/edit_text"
                android:hint="@string/text_please_call_me_prior_to_delivery"
                android:inputType="textMultiLine"
                android:minLines="2"
                android:padding="10dp" />

            <!-- Review Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_place_order"
                style="@style/add_to_cart_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_review_details"
                android:textAllCaps="true" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
