<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.PaymentMethod">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <!-- Progress Bar Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/text_tick_image"
                android:src="@drawable/icons8_tick_filled_100"
                app:tint="@color/green" />

            <View
                android:layout_width="80dp"
                android:layout_height="2dp"
                android:background="@color/black" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/text_tick_image"
                android:src="@drawable/icons8_tick_100" />

            <View
                android:layout_width="80dp"
                android:layout_height="2dp"
                android:background="@color/black" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/text_tick_image"
                android:src="@drawable/icons8_tick_100" />
        </LinearLayout>

        <!-- Steps Titles -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/text_delivery"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textAlignment="textStart"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/text_review"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textAlignment="center" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/text_payment"
                android:textSize="14sp"
                android:textStyle="bold"

                android:textAlignment="textEnd"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp">

            <!-- Payment Summary -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:padding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp">

                    <TextView
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/text_subtotal"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="Rs. 2,720.40"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/text_delivery_charges"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="Rs. 100.00"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="8dp"
                    android:background="#CCCCCC" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <!-- Grand Total -->
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/text_grand_total"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="Rs. 2,820.40"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Payment Method Selection -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/button_color"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/text_choose_available_payment_method"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <!-- Cash on Delivery -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_cash_on_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/description_image_of_cash_on_delivery"
                android:src="@drawable/cash_on_delivery" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/text_cash_on_delivery"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Place Order Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_place_order"
            style="@style/add_to_cart_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_place_order" />
    </LinearLayout>
</ScrollView>
